Add hint priority (proritise prompt, hint or balance) support
